# argbox

./: 404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
argbox/: __init__.py  context.py  dispatch.py  dispatching.py  preprocessing.py  standard.py
context/: index.html
dispatching/: index.html
docs/: context.md  dispatching.md  index.md  preprocessing.md  supported-functions.md  varargs.md
preprocessing/: index.html
search/: search_index.json
supported-functions/: index.html
tests/context/: test_arguments_by_name.py  test_arguments_by_position.py  test_replace_args.py
tests/dispatching/buildins/: test_dispatch_on_rule.py  test_dispatch_on_type.py  test_preprocess_by_transformations.py
varargs/: index.html
