[project]
name = "argbox"
version = "0.2.3"
description = "Interact with arguments passed to a function by their parameter name or position"
readme = "README.md"
requires-python = ">=3.10.8"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.2.6",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = "."

[project.urls]
Repository = "https://github.com/UlrikChristensenGit/argbox.git"

